objects/CrossReference_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Energy_Record_id__c</fullName>
        <label>Energy Record id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Owner:User.User_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visited_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visited By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CrossReference_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visited_Date__c</fullName>
        <label>Visited Date</label>
        <type>DateTime</type>
    </fields>
    <label>CrossReference Audit</label>
    <nameField>
        <label>CrossReference Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CrossReference Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>